NAV: set up linkand anchor

--- a/index.html
+++ b/index.html
@@ -13,14 +13,36 @@
 	
 	<body>
 		<header>
+			<h1>CheatSheetGit</h1>
+			<p>A CheatSheet For Git Versionning</p>
 		</header>
 
 		<nav>
+			<a href="#">Create</a>
+			<a href="#">Local Change</a>
+			<a href="#">Commit History</a>
+			<a href="#">Update & Publish</a>
+			<a href="#">Branch & tags</a>
+			<a href="#">Merge & Rebase</a>
+			<a href="#">Undo</a>
+
 		</nav>
 
 		<section>
 			<article>
 			</article>
+
+			<article></article>
+
+			<article></article>
+
+			<article></article>
+
+			<article></article>
+
+			<article></article>
+
+			<article></article>
 		</section>
 
 		<footer>
