commit before last changing

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<!-- cheatsheetvim page -->
+<!-- cheatsheetgit page -->
 
 <!DOCTYPE >
 <html>
 	<head>
 		<meta charset="utf-8" >
 		<meta name="keywords" content="cheatsheet,vim,editor">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="Dehondt matthieu">				
-		<meta name="description" content="a cheatsheet for vim editor">
-		<title>CheatSheet For Vim Editor</title>
+		<meta name="description" content="a cheatsheet for Git ">
+		<title>CheatSheet For git </title>
 		<link rel="stylesheet" href="style.css" type="text/css">
 	</head>
 	
