last changes before deadline

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <!DOCTYPE >
 <html>
+
+
+<!-- hidden information: author, title, link-->
 	<head>
 		<meta charset="utf-8" >
 		<meta name="keywords" content="cheatsheet,vim,editor">
@@ -13,6 +16,9 @@
 	</head>
 	
 	<body>
+
+
+	<!-- the header of the page-->
 		<header>
 			<div class="mytitle">
 			<h1>CheatSheetGit</h1>
@@ -21,6 +27,8 @@
 			<img src="git.jpg" alt"logo de git">
 		</header>
 
+	
+	<!-- the navigation bar -->
 		<nav>
 			<a href="#create">Create</a>
 			<a href="#local">Local Change</a>
@@ -31,6 +39,9 @@
 			<a href="#undo">Undo</a>
 		</nav>
 
+
+
+	<!-- the page's content -->
 		<section>
 				<table>
 					<thead>
@@ -263,10 +274,10 @@
 						</tr>
 					</tbody>
 				</table>
-
-
 		</section>
 
+
+<!-- the footer's page -->
 		<footer>
 			Web Site's Author: DEHONDT MATTHIEU
 		</footer>
